# telegram-standup-bot

./: .dockerignore  Dockerfile  README.md  docker-compose.build.yml  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.test.yml  pyproject.toml
telegram-standup-bot/: __main__.py  app.py  bot.py  structs.py  utils.py
telegram-standup-bot/handlers/: manage_users_in_standup.py  process_new_members.py  start_bot.py  user_report.py  user_settings.py  utils.py  warnings.py
